--- a/HTML/W3schools/Graphics_Canvas/canvas.html
+++ b/HTML/W3schools/Graphics_Canvas/canvas.html
@@ -2,22 +2,18 @@
 <html>
 <body>
 
-<svg width="100" height="100">
-  <circle cx="50" cy="50" r="40"
-  stroke="green" stroke-width="4" fill="yellow" />
-Sorry, your browser does not support inline SVG.
+<svg height="130" width="500">
+  <defs>
+    <linearGradient id="grad1">
+      <stop offset="0%" stop-color="yellow" />
+      <stop offset="100%" stop-color="red" />
+    </linearGradient>
+  </defs>
+  <ellipse cx="100" cy="70" rx="85" ry="55" fill="url(#grad1)" />
+  <text fill="#ffffff" font-size="45" font-family="Verdana" x="50" y="86">SVG</text>
+  
 </svg>
- 
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
 
