--- a/HTML/CSS/Practice01.html
+++ b/HTML/CSS/Practice01.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet"href="practice.css">
 </head>
 <body>
-    <h1>display playground</h1>
-    <div id="box1"> box1</div>
-    <div id="box2"> box2</div>
-    <div id="box3"> box3</div>
+    <h1>Hello</h1>
+    <div id ="outer">
+        outer 
+        <div id ="inner">
+            inner
+
+        </div>
+    </div>
 </body>
-</html> 
+</html>
